--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
