--- a/apps/resources/package.json
+++ b/apps/resources/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
-    "@sewan/core": "^1.0.0"
+    "@sewan/core": "^1.0.0",
+    "styled-components": "^4.3.2"
   },
   "module": "/dist/resources.js",
   "scripts": {
