--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   ],
   "devDependencies": {
     "lerna": "^4.0.0",
-    "eslint": "^7.23.0"
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
