--- a/apps/resources/package.json
+++ b/apps/resources/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "peerDependencies": {
-    "@sewan/foundation-core": "^1.0.0"
+    "@sewan/core": "^1.0.0"
   },
   "dependencies": {
     "react-scripts": "4.0.3",
